Добавил реализацию массовой деактивации пользователей (с переназначением PR если пользователь неактивен после массовой деактивации)
